PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/NoIndexAccessInPatternCalls.par
NoIndexAccessInPatternCalls {

map add([Int] input) : [Int] res{
    res[INDEX] = input[INDEX] + 1
}
seq main() : Void {
    var [[Int]] test = init_List([10,10])
    test = add<<<>>>(test[0])

}
}